AM_CFLAGS = $(GLOBAL_CFLAGS) $(libplist_CFLAGS) $(libgeneral_CFLAGS)
AM_CXXFLAGS = $(AM_CFLAGS) $(GLOBAL_CXXFLAGS)
AM_LDFLAGS = $(libplist_LIBS) $(libgeneral_LIBS)

bin_PROGRAMS = uido2hashcat

uido2hashcat_CFLAGS = $(AM_CFLAGS)
uido2hashcat_CXXFLAGS = $(AM_CXXFLAGS)
uido2hashcat_LDFLAGS = $(AM_LDFLAGS)
uido2hashcat_SOURCES = 	main.cpp
